test-ui/ui/msg_send_id_invalid_return.stderr
error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_return.rs
  |
  |     let _: &Object = unsafe { msg_send_id![cls, new].unwrap() };
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                               |
  |                               expected `&objc2::runtime::Object`, found struct `Id`
  |                               help: consider borrowing here: `&msg_send_id![cls, new].unwrap()`
  |
  = note: expected reference `&objc2::runtime::Object`
                found struct `Id<_, _>`

error[E0277]: the trait bound `objc2::runtime::Class: Message` is not satisfied
  --> ui/msg_send_id_invalid_return.rs
   |
   |     let _: Id<Class, Shared> = unsafe { msg_send_id![cls, new].unwrap() };
   |                                         ^^^^^^^^^^^^^^^^^^^^^^ the trait `Message` is not implemented for `objc2::runtime::Class`
   |
   = help: the following other types implement trait `Message`:
             Exception
             NSArray<T, O>
             NSAttributedString
             NSData
             NSDictionary<K, V>
             NSException
             NSMutableArray<T, O>
             NSMutableAttributedString
           and 9 others
   = note: required because of the requirements on the impl of `MsgSendId<&objc2::runtime::Class, Id<objc2::runtime::Class, Shared>>` for `RetainSemantics<true, false, false, false>`
   = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_return.rs
   |
   |     let _: &Object = unsafe { msg_send_id![cls, alloc].unwrap() };
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&objc2::runtime::Object`, found struct `Id`
   |
   = note: expected reference `&objc2::runtime::Object`
                 found struct `Id<Allocated<_>, _>`

error[E0277]: the trait bound `objc2::runtime::Class: Message` is not satisfied
  --> ui/msg_send_id_invalid_return.rs
   |
   |     let _: Id<Allocated<Class>, Shared> = unsafe { msg_send_id![cls, alloc].unwrap() };
   |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Message` is not implemented for `objc2::runtime::Class`
   |
   = help: the following other types implement trait `Message`:
             Exception
             NSArray<T, O>
             NSAttributedString
             NSData
             NSDictionary<K, V>
             NSException
             NSMutableArray<T, O>
             NSMutableAttributedString
           and 9 others
   = note: required because of the requirements on the impl of `MsgSendId<&objc2::runtime::Class, Id<Allocated<objc2::runtime::Class>, Shared>>` for `RetainSemantics<false, true, false, false>`
   = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_return.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![cls, alloc].unwrap() };
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `objc2::runtime::Object`, found struct `Allocated`
   |
   = note: expected struct `Id<objc2::runtime::Object, Shared>`
              found struct `Id<Allocated<_>, _>`

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_return.rs
   |
   |     let _: &Object = unsafe { msg_send_id![obj, init].unwrap() };
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                               |
   |                               expected `&objc2::runtime::Object`, found struct `Id`
   |                               help: consider borrowing here: `&msg_send_id![obj, init].unwrap()`
   |
   = note: expected reference `&objc2::runtime::Object`
                 found struct `Id<objc2::runtime::Object, Shared>`

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_return.rs
   |
   |     let _: Id<Class, Shared> = unsafe { msg_send_id![obj, init].unwrap() };
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `objc2::runtime::Class`, found struct `objc2::runtime::Object`
   |
   = note: expected struct `Id<objc2::runtime::Class, _>`
              found struct `Id<objc2::runtime::Object, _>`

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_return.rs
   |
   |     let _: Id<NSObject, Shared> = unsafe { msg_send_id![obj, init].unwrap() };
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `NSObject`, found struct `objc2::runtime::Object`
   |
   = note: expected struct `Id<NSObject, _>`
              found struct `Id<objc2::runtime::Object, _>`

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_return.rs
   |
   |     let _: Id<Object, Owned> = unsafe { msg_send_id![obj, init].unwrap() };
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `objc2::rc::Owned`, found struct `Shared`
   |
   = note: expected struct `Id<_, objc2::rc::Owned>`
              found struct `Id<_, Shared>`

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_return.rs
   |
   |     let _: &Object = unsafe { msg_send_id![&obj, description].unwrap() };
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                               |
   |                               expected `&objc2::runtime::Object`, found struct `Id`
   |                               help: consider borrowing here: `&msg_send_id![&obj, description].unwrap()`
   |
   = note: expected reference `&objc2::runtime::Object`
                 found struct `Id<_, _>`
